# Yamangulov_Homework_course_4

./: .coverage  .gitignore  README.md  pyproject.toml
src/: classes.py  main.py  main2.py  main3.py
tests/: test_classes.py
